--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,15 +24,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="30dp"
             android:text="TITLE"
-            android:textSize="36sp"
+            android:textSize="48sp"
             android:textColor="@color/black"
             android:textStyle="bold"/>
 
         <androidx.constraintlayout.utils.widget.ImageFilterView
             android:id="@+id/img_main"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="250dp"
             app:layout_constraintTop_toBottomOf="@id/tv_title"
             app:layout_constraintBottom_toTopOf="@id/rv_img"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +54,9 @@
             android:id="@+id/edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:hint="검색어를 입력하세요. (icon/picture)"
+            android:background="@drawable/bg_edittext"
             app:layout_constraintBottom_toTopOf="@id/btn_main"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black" />
@@ -64,12 +68,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="#222222"
-            android:text="입 력"
+            android:background="@drawable/bg_button"
+            android:text="검 색"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="24sp"
-            android:layout_marginBottom="50dp"/>
+            android:layout_marginBottom="30dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
