--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="30dp"
-            android:text="TITLE"
+            android:text="@{viewModel.title}"
             android:textSize="48sp"
             android:textColor="@color/black"
             android:textStyle="bold"/>
